--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="description" content="Ngx Audio Player Demo">
   <meta name="author" content="Vijayendra Mudigal">
   <meta name="keyword" content="Angular, Ngx, Audio Player, NgxAudioPlayer, NgxAudioPlayerDemo">
@@ -26,4 +27,14 @@
 <body class="docs-app-background">
       <app-root></app-root>
 </body>
+<script>
+  function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+      x.className += " responsive";
+    } else {
+      x.className = "topnav";
+    }
+  }
+</script>
 </html>
